--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^7.2.5|^7.3|^8.0",
-        "illuminate/contracts": "^6.0|^7.0|^8.0"
+        "illuminate/contracts": "^6.0|^7.0|^8.0|^9.0|^10.0"
     },
     "require-dev": {
         "orchestra/testbench": "^4.0|^5.0|^6.0",
